# agentdoctor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  citation.cff  pyproject.toml
.github/workflows/: lint.yml  test-all.yml  test-core.yml  test-detectors.yml  test-parsers.yml
agentdoctor/: __init__.py  _text_utils.py  diagnoser.py  models.py  report.py  taxonomy.py
agentdoctor/detectors/: __init__.py  base.py  context_erosion.py  goal_hijacking.py  hallucinated_tool_success.py  instruction_drift.py  recovery_blindness.py  silent_degradation.py  tool_thrashing.py
agentdoctor/parsers/: __init__.py  base.py  json_parser.py
agentdx/: __init__.py  _text_utils.py  diagnoser.py  models.py  report.py  taxonomy.py
agentdx/detectors/: __init__.py  base.py  context_erosion.py  goal_hijacking.py  hallucinated_tool_success.py  instruction_drift.py  recovery_blindness.py  silent_degradation.py  tool_thrashing.py
agentdx/parsers/: __init__.py  base.py  json_parser.py
case_study/: run_evaluation.py  verdict.md  walkthrough.ipynb
case_study/agents/: evaluation-runner.md  trace-generator.md  trace-validator.md
case_study/harness/: __init__.py  evaluate.py  metrics.py  report_generator.py
case_study/results/: baseline_results.json  evaluation_report.md
case_study/traces/: ground_truth.json
case_study/traces/challenging_negatives/: cn_01.json  cn_02.json  cn_03.json
case_study/traces/context_erosion/: ce_01.json  ce_02.json  ce_03.json  ce_neg_01.json  ce_neg_02.json
case_study/traces/goal_hijacking/: gh_01.json  gh_02.json  gh_03.json  gh_neg_01.json  gh_neg_02.json
case_study/traces/hallucinated_tool_success/: ht_01.json  ht_02.json  ht_03.json  ht_neg_01.json  ht_neg_02.json
tests/: test_context_erosion.py  test_detectors.py  test_diagnoser.py  test_evaluation_harness.py  test_goal_hijacking.py  test_hallucinated_tool_success.py  test_instruction_drift.py  test_models.py  test_parsers.py  test_recovery_blindness.py  test_report.py  test_silent_degradation.py  test_taxonomy.py  test_text_utils.py  test_tool_thrashing.py
(+26 files in other folders)
