[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdoctor"
version = "0.1.0"
description = "Open-source diagnostic SDK for detecting failure pathologies in AI agent systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Anmol Parimoo"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.setuptools.packages.find]
include = ["agentdoctor*"]
