[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdx"
version = "0.1.0a3"
description = "Open-source diagnostic SDK for detecting failure pathologies in AI agent systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Anmol Parimoo"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/mldeepsystems/agentdx"
Repository = "https://github.com/mldeepsystems/agentdx"
Issues = "https://github.com/mldeepsystems/agentdx/issues"

[tool.setuptools.packages.find]
include = ["agentdx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint.per-file-ignores]
"case_study/walkthrough.ipynb" = ["E402"]
